<resources>
    <string name="app_name">FilesCatalogApp</string>
    <string name="hint_new_file_name">Name</string>
    <string name="hint_new_file_status">Status</string>
    <string name="hint_new_file_size">Size</string>
    <string name="hint_new_file_location">Location</string>
    <string name="hint_new_file_usage">Usage</string>
    <string name="hint_new_file_save_button">Save</string>
    <string name="hint_new_file_empty_field">File not saved because a field was empty</string>
</resources>
